Add pretrained support and fix TV loss.

--- a/config.yml
+++ b/config.yml
@@ -5,3 +5,10 @@ lambda:
   tv: 0.1
   prc: 0.05
   style: 120.0
+
+# Parameters for segmentation model
+model: DEEPLABV3-RESNET101
+
+#['__background__', 'aeroplane', 'bicycle', 'bird', 'boat', 'bottle', 'bus',
+# 'car', 'cat', 'chair', 'cow', 'diningtable', 'dog', 'horse', 'motorbike',
+# 'person', 'pottedplant', 'sheep', 'sofa', 'train', 'tvmonitor']
